force-app/main/default/objects/YGSF_Contract__c/YGSF_Contract__c.object-meta.xml
<CustomObject>
    <label>YGSF Contract</label>
    <nameField>
        <displayFormat>YGSF-{0000}</displayFormat>
        <label>YGSF Contract Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>YGSF Contracts</pluralLabel>
    <sharingModel>Private</sharingModel>
</CustomObject>