force-app/main/default/objects/YGSF_Contract__c/fields/Additional_Insured_Received__c.field-meta.xml
<CustomField>
    <fullName>Additional_Insured_Received__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Additional Insured Endorsement Received</label>
    <type>Checkbox</type>
</CustomField>