force-app/main/default/objects/YGSF_Contract__c/fields/Approval_Path__c.field-meta.xml
<CustomField>
    <fullName>Approval_Path__c</fullName>
    <label>Approval Path</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Section 3.2.1 - SVP and Officer</fullName>
            </value>
            <value>
                <fullName>Section 3.2.2 - SVP and VP</fullName>
            </value>
            <value>
                <fullName>Section 3.2.3 - ED and VP</fullName>
            </value>
            <value>
                <fullName>Section 3.2.4 - Branch ED Only</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>