force-app/main/default/objects/YGSF_Contract__c/fields/Attorney_Reviewer__c.field-meta.xml
<CustomField>
    <fullName>Attorney_Reviewer__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Attorney Reviewer</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Attorney_Reviewer_Contracts</relationshipName>
    <type>Lookup</type>
</CustomField>