force-app/main/default/objects/YGSF_Contract__c/fields/Board_Approval_Required__c.field-meta.xml
<CustomField>
    <fullName>Board_Approval_Required__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Board Approval Required</label>
    <type>Checkbox</type>
</CustomField>