force-app/main/default/objects/YGSF_Contract__c/fields/Branch_ED__c.field-meta.xml
<CustomField>
    <fullName>Branch_ED__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Branch Executive Director</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Branch_ED_Contracts</relationshipName>
    <type>Lookup</type>
</CustomField>