force-app/main/default/objects/YGSF_Contract__c/fields/CFO_Payment_Approval__c.field-meta.xml
<CustomField>
    <fullName>CFO_Payment_Approval__c</fullName>
    <defaultValue>false</defaultValue>
    <label>CFO Payment Approval</label>
    <type>Checkbox</type>
</CustomField>