force-app/main/default/objects/YGSF_Contract__c/fields/COI_Expiration_Date__c.field-meta.xml
<CustomField>
    <fullName>COI_Expiration_Date__c</fullName>
    <label>COI Expiration Date</label>
    <type>Date</type>
</CustomField>