force-app/main/default/objects/YGSF_Contract__c/fields/COI_Received__c.field-meta.xml
<CustomField>
    <fullName>COI_Received__c</fullName>
    <defaultValue>false</defaultValue>
    <label>COI Received</label>
    <type>Checkbox</type>
</CustomField>