force-app/main/default/objects/YGSF_Contract__c/fields/COI_Required__c.field-meta.xml
<CustomField>
    <fullName>COI_Required__c</fullName>
    <defaultValue>false</defaultValue>
    <label>COI Required</label>
    <type>Checkbox</type>
</CustomField>