force-app/main/default/objects/YGSF_Contract__c/fields/Contract_Subject_Picklist__c.field-meta.xml
<CustomField>
    <fullName>Contract_Subject_Picklist__c</fullName>
    <label>Contract Subject</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Alcohol Service</fullName>
            </value>
            <value>
                <fullName>Auctioneers</fullName>
            </value>
            <value>
                <fullName>Bounce House Stage Tent</fullName>
            </value>
            <value>
                <fullName>Bus Transportation Service</fullName>
            </value>
            <value>
                <fullName>Business Associate Agreement</fullName>
            </value>
            <value>
                <fullName>Consultant Agreement</fullName>
            </value>
            <value>
                <fullName>Construction</fullName>
            </value>
            <value>
                <fullName>Equipment or Furniture Rental</fullName>
            </value>
            <value>
                <fullName>Event Production</fullName>
            </value>
            <value>
                <fullName>Exchange of Employee Member Data</fullName>
            </value>
            <value>
                <fullName>Facility Use Agreement</fullName>
            </value>
            <value>
                <fullName>Fiduciary Management Services</fullName>
            </value>
            <value>
                <fullName>Fiscal Sponsorship Agreement</fullName>
            </value>
            <value>
                <fullName>Food Service Catering</fullName>
            </value>
            <value>
                <fullName>Grant Agreement</fullName>
            </value>
            <value>
                <fullName>Grant Funded Contractor or Services</fullName>
            </value>
            <value>
                <fullName>Health Screening Medical Service</fullName>
            </value>
            <value>
                <fullName>Hotel Conference Venue Rental</fullName>
            </value>
            <value>
                <fullName>Independent Contractor Professional</fullName>
            </value>
            <value>
                <fullName>Independent Contractor Youth</fullName>
            </value>
            <value>
                <fullName>Internship Affiliation or Placement</fullName>
            </value>
            <value>
                <fullName>Legal Services</fullName>
            </value>
            <value>
                <fullName>Maintenance Agreement</fullName>
            </value>
            <value>
                <fullName>Musicians DJs Entertainers Emcees</fullName>
            </value>
            <value>
                <fullName>NDA</fullName>
            </value>
            <value>
                <fullName>Photographer</fullName>
            </value>
            <value>
                <fullName>PII or HIPAA Related Contract</fullName>
            </value>
            <value>
                <fullName>Professional Services</fullName>
            </value>
            <value>
                <fullName>Property Lease License or Rental</fullName>
            </value>
            <value>
                <fullName>PTA Agreement for Enrichment</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>