force-app/main/default/objects/YGSF_Contract__c/fields/Contract_Title__c.field-meta.xml
<CustomField>
    <fullName>Contract_Title__c</fullName>
    <label>Contract Title</label>
    <length>255</length>
    <required>true</required>
    <type>Text</type>
</CustomField>