force-app/main/default/objects/YGSF_Contract__c/fields/Contract_Type__c.field-meta.xml
<CustomField>
    <fullName>Contract_Type__c</fullName>
    <label>Contract Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Grant</fullName>
            </value>
            <value>
                <fullName>Service Agreement</fullName>
            </value>
            <value>
                <fullName>Memorandum of Understanding</fullName>
            </value>
            <value>
                <fullName>Independent Contractor Agreement</fullName>
            </value>
            <value>
                <fullName>ICA Addendum</fullName>
            </value>
            <value>
                <fullName>Facility Lease</fullName>
            </value>
            <value>
                <fullName>Equipment Lease</fullName>
            </value>
            <value>
                <fullName>Facility License</fullName>
            </value>
            <value>
                <fullName>Maintenance Agreement</fullName>
            </value>
            <value>
                <fullName>Construction Contract</fullName>
            </value>
            <value>
                <fullName>Engagement Letter</fullName>
            </value>
            <value>
                <fullName>Facility Use Agreement</fullName>
            </value>
            <value>
                <fullName>User Group Agreement</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>