force-app/main/default/objects/YGSF_Contract__c/fields/Counterparty_Account__c.field-meta.xml
<CustomField>
    <fullName>Counterparty_Account__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Counterparty Account</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>YGSF Contracts</relationshipLabel>
    <relationshipName>YGSF_Contracts</relationshipName>
    <type>Lookup</type>
</CustomField>