force-app/main/default/objects/YGSF_Contract__c/fields/Counterparty_Contact__c.field-meta.xml
<CustomField>
    <fullName>Counterparty_Contact__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Counterparty Contact</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>YGSF Contracts</relationshipLabel>
    <relationshipName>YGSF_Contracts</relationshipName>
    <type>Lookup</type>
</CustomField>