force-app/main/default/objects/YGSF_Contract__c/fields/Counterparty_Name__c.field-meta.xml
<CustomField>
    <fullName>Counterparty_Name__c</fullName>
    <label>Counterparty Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>