force-app/main/default/objects/YGSF_Contract__c/fields/Days_In_Review__c.field-meta.xml
<CustomField>
    <fullName>Days_In_Review__c</fullName>
    <formula>IF(ISBLANK(Submission_Date__c), 0, IF(ISBLANK(Legal_Review_Date__c), TODAY() - Submission_Date__c, Legal_Review_Date__c - Submission_Date__c))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Days In Review</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>