force-app/main/default/objects/YGSF_Contract__c/fields/Desired_Execution_Date__c.field-meta.xml
<CustomField>
    <fullName>Desired_Execution_Date__c</fullName>
    <label>Desired Execution Date</label>
    <type>Date</type>
</CustomField>