force-app/main/default/objects/YGSF_Contract__c/fields/Gift_Acceptance_Review__c.field-meta.xml
<CustomField>
    <fullName>Gift_Acceptance_Review__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Gift Acceptance Review Required</label>
    <type>Checkbox</type>
</CustomField>