force-app/main/default/objects/YGSF_Contract__c/fields/ICA_Approval_Form_Received__c.field-meta.xml
<CustomField>
    <fullName>ICA_Approval_Form_Received__c</fullName>
    <defaultValue>false</defaultValue>
    <label>ICA Approval Form Received</label>
    <type>Checkbox</type>
</CustomField>