force-app/main/default/objects/YGSF_Contract__c/fields/Is_Overdue__c.field-meta.xml
<CustomField>
    <fullName>Is_Overdue__c</fullName>
    <formula>AND(NOT(ISBLANK(Submission_Date__c)), ISBLANK(Legal_Review_Date__c), TODAY() - Submission_Date__c &gt; 5)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Is Overdue</label>
    <type>Checkbox</type>
</CustomField>