force-app/main/default/objects/YGSF_Contract__c/fields/Legal_Acknowledgment_Date__c.field-meta.xml
<CustomField>
    <fullName>Legal_Acknowledgment_Date__c</fullName>
    <label>Legal Acknowledgment Date</label>
    <type>Date</type>
</CustomField>