force-app/main/default/objects/YGSF_Contract__c/fields/Legal_Review_Complete__c.field-meta.xml
<CustomField>
    <fullName>Legal_Review_Complete__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Legal Review Complete</label>
    <type>Checkbox</type>
</CustomField>