force-app/main/default/objects/YGSF_Contract__c/fields/Legal_Review_Date__c.field-meta.xml
<CustomField>
    <fullName>Legal_Review_Date__c</fullName>
    <label>Legal Review Date</label>
    <type>Date</type>
</CustomField>