force-app/main/default/objects/YGSF_Contract__c/fields/Legal_Review_Required__c.field-meta.xml
<CustomField>
    <fullName>Legal_Review_Required__c</fullName>
    <label>Legal Review Required</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Before Execution</fullName>
            </value>
            <value>
                <fullName>After Execution</fullName>
            </value>
            <value>
                <fullName>Not Required</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>