force-app/main/default/objects/YGSF_Contract__c/fields/Legal_Review_Required_Before__c.field-meta.xml
<CustomField>
    <fullName>Legal_Review_Required_Before__c</fullName>
    <formula>ISPICKVAL(Legal_Review_Required__c, &quot;Before Execution&quot;)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Legal Review Required Before Execution</label>
    <type>Checkbox</type>
</CustomField>