force-app/main/default/objects/YGSF_Contract__c/fields/Legal_Reviewer__c.field-meta.xml
<CustomField>
    <fullName>Legal_Reviewer__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Legal Reviewer</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Legal_Reviewer_Contracts</relationshipName>
    <type>Lookup</type>
</CustomField>