force-app/main/default/objects/YGSF_Contract__c/fields/Officer_Approver__c.field-meta.xml
<CustomField>
    <fullName>Officer_Approver__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Officer Approver</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Officer_Approver_Contracts</relationshipName>
    <type>Lookup</type>
</CustomField>