force-app/main/default/objects/YGSF_Contract__c/fields/Services_Started_Before_Execution__c.field-meta.xml
<CustomField>
    <fullName>Services_Started_Before_Execution__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Services Started Before Execution</label>
    <type>Checkbox</type>
</CustomField>