force-app/main/default/objects/YGSF_Contract__c/fields/SLA_Status__c.field-meta.xml
<CustomField>
    <fullName>SLA_Status__c</fullName>
    <formula>IF(ISBLANK(Submission_Date__c), &quot;N/A&quot;, IF(NOT(ISBLANK(Legal_Review_Date__c)), &quot;Complete&quot;, IF(TODAY() - Submission_Date__c &gt; 7, &quot;Red&quot;, IF(TODAY() - Submission_Date__c &gt; 5, &quot;Yellow&quot;, &quot;Green&quot;))))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>SLA Status</label>
    <type>Text</type>
</CustomField>