force-app/main/default/objects/YGSF_Contract__c/fields/Staff_Liaison__c.field-meta.xml
<CustomField>
    <fullName>Staff_Liaison__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Staff Liaison</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Staff_Liaison_Contracts</relationshipName>
    <type>Lookup</type>
</CustomField>