force-app/main/default/objects/YGSF_Contract__c/fields/SVP_Approver__c.field-meta.xml
<CustomField>
    <fullName>SVP_Approver__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>SVP Approver</label>
    <referenceTo>User</referenceTo>
    <relationshipName>SVP_Approver_Contracts</relationshipName>
    <type>Lookup</type>
</CustomField>