force-app/main/default/objects/YGSF_Contract__c/fields/Value_Threshold__c.field-meta.xml
<CustomField>
    <fullName>Value_Threshold__c</fullName>
    <formula>IF(Contract_Value__c &lt;= 10000, &quot;At Or Below $10K&quot;, &quot;Above $10K&quot;)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Value Threshold</label>
    <type>Text</type>
</CustomField>