force-app/main/default/objects/YGSF_Contract__c/fields/VP_Approver__c.field-meta.xml
<CustomField>
    <fullName>VP_Approver__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>VP Approver</label>
    <referenceTo>User</referenceTo>
    <relationshipName>VP_Approver_Contracts</relationshipName>
    <type>Lookup</type>
</CustomField>