force-app/main/default/objects/YGSF_Contract__c/fields/YGSF_Template_Used__c.field-meta.xml
<CustomField>
    <fullName>YGSF_Template_Used__c</fullName>
    <defaultValue>false</defaultValue>
    <label>YGSF Template Used</label>
    <type>Checkbox</type>
</CustomField>