force-app/main/default/objects/YGSF_Contract__c/recordTypes/Construction_Contract.recordType-meta.xml
<RecordType>
    <fullName>Construction_Contract</fullName>
    <active>true</active>
    <label>Construction Contract</label>
</RecordType>