force-app/main/default/objects/YGSF_Contract__c/recordTypes/Engagement_Letter.recordType-meta.xml
<RecordType>
    <fullName>Engagement_Letter</fullName>
    <active>true</active>
    <label>Engagement Letter</label>
</RecordType>