force-app/main/default/objects/YGSF_Contract__c/recordTypes/Equipment_Lease.recordType-meta.xml
<RecordType>
    <fullName>Equipment_Lease</fullName>
    <active>true</active>
    <label>Lease - Equipment</label>
</RecordType>