force-app/main/default/objects/YGSF_Contract__c/recordTypes/Facility_Lease.recordType-meta.xml
<RecordType>
    <fullName>Facility_Lease</fullName>
    <active>true</active>
    <label>Lease - Facility</label>
</RecordType>