force-app/main/default/objects/YGSF_Contract__c/recordTypes/Facility_License.recordType-meta.xml
<RecordType>
    <fullName>Facility_License</fullName>
    <active>true</active>
    <label>Facility License</label>
</RecordType>