force-app/main/default/objects/YGSF_Contract__c/recordTypes/Facility_Use_Agreement.recordType-meta.xml
<RecordType>
    <fullName>Facility_Use_Agreement</fullName>
    <active>true</active>
    <label>Facility Use Agreement</label>
</RecordType>