force-app/main/default/objects/YGSF_Contract__c/recordTypes/ICA_Addendum.recordType-meta.xml
<RecordType>
    <fullName>ICA_Addendum</fullName>
    <active>true</active>
    <label>ICA Addendum</label>
</RecordType>