force-app/main/default/objects/YGSF_Contract__c/recordTypes/Independent_Contractor_Agreement.recordType-meta.xml
<RecordType>
    <fullName>Independent_Contractor_Agreement</fullName>
    <active>true</active>
    <label>Independent Contractor Agreement (ICA)</label>
</RecordType>