force-app/main/default/objects/YGSF_Contract__c/recordTypes/Maintenance_Agreement.recordType-meta.xml
<RecordType>
    <fullName>Maintenance_Agreement</fullName>
    <active>true</active>
    <label>Maintenance Agreement</label>
</RecordType>