force-app/main/default/objects/YGSF_Contract__c/recordTypes/MOU.recordType-meta.xml
<RecordType>
    <fullName>MOU</fullName>
    <active>true</active>
    <label>Memorandum of Understanding (MOU)</label>
</RecordType>