force-app/main/default/objects/YGSF_Contract__c/recordTypes/Service_Agreement.recordType-meta.xml
<RecordType>
    <fullName>Service_Agreement</fullName>
    <active>true</active>
    <label>Service Agreement</label>
</RecordType>