force-app/main/default/objects/YGSF_Contract__c/recordTypes/User_Group_Agreement.recordType-meta.xml
<RecordType>
    <fullName>User_Group_Agreement</fullName>
    <active>true</active>
    <label>User Group Agreement</label>
</RecordType>