force-app/main/default/objects/YGSF_Contract__c/validationRules/Contract_Value_Required_On_Submit.validationRule-meta.xml
<ValidationRule>
    <fullName>Contract_Value_Required_On_Submit</fullName>
    <active>true</active>
    <errorConditionFormula>AND(ISBLANK(Contract_Value__c), ISPICKVAL(Status__c, "Submitted"))</errorConditionFormula>
    <errorMessage>Contract value is required before submitting for review.</errorMessage>
</ValidationRule>