force-app/main/default/objects/YGSF_Contract__c/validationRules/Electronic_Payment_Requires_CFO.validationRule-meta.xml
<ValidationRule>
    <fullName>Electronic_Payment_Requires_CFO</fullName>
    <active>true</active>
    <errorConditionFormula>AND(ISPICKVAL(Payment_Method__c, "Electronic"), NOT(CFO_Payment_Approval__c))</errorConditionFormula>
    <errorMessage>Electronic payment method requires CFO approval prior to contract execution, per YGSF Contract Policy Section 5.3.</errorMessage>
</ValidationRule>