force-app/main/default/objects/YGSF_Contract__c/validationRules/No_Purchase_Card.validationRule-meta.xml
<ValidationRule>
    <fullName>No_Purchase_Card</fullName>
    <active>true</active>
    <errorConditionFormula>ISPICKVAL(Payment_Method__c, "Purchase Card")</errorConditionFormula>
    <errorMessage>Purchase cards cannot be used to settle payment requirements on any contract or agreement, per YGSF Contract Policy Section 5.3.</errorMessage>
</ValidationRule>