force-app/main/default/objects/YGSF_Contract__c/validationRules/Require_Additional_Insured.validationRule-meta.xml
<ValidationRule>
    <fullName>Require_Additional_Insured</fullName>
    <active>true</active>
    <errorConditionFormula>AND(Additional_Insured_Required__c, NOT(Additional_Insured_Received__c), ISPICKVAL(Status__c, "Fully Executed"))</errorConditionFormula>
    <errorMessage>Additional Insured Endorsement must be received before the contract can be fully executed.</errorMessage>
</ValidationRule>