force-app/main/default/objects/YGSF_Contract__c/validationRules/Require_Board_Approval.validationRule-meta.xml
<ValidationRule>
    <fullName>Require_Board_Approval</fullName>
    <active>true</active>
    <errorConditionFormula>AND(Board_Approval_Required__c, ISBLANK(Board_Approval_Date__c), ISPICKVAL(Status__c, "Fully Executed"))</errorConditionFormula>
    <errorMessage>Board of Directors approval is required before this contract can be fully executed.</errorMessage>
</ValidationRule>