force-app/main/default/objects/YGSF_Contract__c/validationRules/Require_COI_Before_Execution.validationRule-meta.xml
<ValidationRule>
    <fullName>Require_COI_Before_Execution</fullName>
    <active>true</active>
    <errorConditionFormula>AND(COI_Required__c, NOT(COI_Received__c), ISPICKVAL(Status__c, "Fully Executed"))</errorConditionFormula>
    <errorMessage>Certificate of Insurance (COI) must be received before the contract can be fully executed.</errorMessage>
</ValidationRule>