force-app/main/default/objects/YGSF_Contract__c/validationRules/Require_ICA_Form.validationRule-meta.xml
<ValidationRule>
    <fullName>Require_ICA_Form</fullName>
    <active>true</active>
    <errorConditionFormula>AND(ICA_Approval_Form_Required__c, NOT(ICA_Approval_Form_Received__c), ISPICKVAL(Status__c, "Submitted"))</errorConditionFormula>
    <errorMessage>ICA Approval Form must be received before the contract can be submitted for review.</errorMessage>
</ValidationRule>