force-app/main/default/objects/YGSF_Contract__c/validationRules/Require_Legal_Review_Before_Exec.validationRule-meta.xml
<ValidationRule>
    <fullName>Require_Legal_Review_Before_Exec</fullName>
    <active>true</active>
    <errorConditionFormula>AND(Legal_Review_Required_Before__c, NOT(Legal_Review_Complete__c), OR(ISPICKVAL(Status__c, "Pending Signatures"), ISPICKVAL(Status__c, "Fully Executed")))</errorConditionFormula>
    <errorMessage>Legal Department review must be completed before this contract can proceed to signatures or execution.</errorMessage>
</ValidationRule>