force-app/main/default/objects/YGSF_Contract__c/listViews/Active_Contracts.listView-meta.xml
<ListView>
    <fullName>Active_Contracts</fullName>
    <columns>NAME</columns>
    <columns>Contract_Title__c</columns>
    <columns>Contract_Type__c</columns>
    <columns>Contract_Subject_Picklist__c</columns>
    <columns>Contract_Value__c</columns>
    <columns>Start_Date__c</columns>
    <columns>End_Date__c</columns>
    <columns>Location__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Status__c</field>
        <operation>equals</operation>
        <value>Active</value>
    </filters>
    <label>Active Contracts</label>
</ListView>