force-app/main/default/objects/YGSF_Contract__c/listViews/All_Contracts.listView-meta.xml
<ListView>
    <fullName>All_Contracts</fullName>
    <columns>NAME</columns>
    <columns>Contract_Title__c</columns>
    <columns>Contract_Type__c</columns>
    <columns>Contract_Subject_Picklist__c</columns>
    <columns>Status__c</columns>
    <columns>Contract_Value__c</columns>
    <columns>Start_Date__c</columns>
    <columns>End_Date__c</columns>
    <columns>Staff_Liaison__c</columns>
    <filterScope>Everything</filterScope>
    <label>All Contracts</label>
</ListView>