force-app/main/default/objects/YGSF_Contract__c/listViews/Expiring_Soon.listView-meta.xml
<ListView>
    <fullName>Expiring_Soon</fullName>
    <columns>NAME</columns>
    <columns>Contract_Title__c</columns>
    <columns>Contract_Type__c</columns>
    <columns>End_Date__c</columns>
    <columns>Auto_Renew__c</columns>
    <columns>Staff_Liaison__c</columns>
    <columns>Location__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Status__c</field>
        <operation>equals</operation>
        <value>Active</value>
    </filters>
    <label>Expiring Soon</label>
</ListView>