force-app/main/default/objects/YGSF_Contract__c/listViews/My_Contracts.listView-meta.xml
<ListView>
    <fullName>My_Contracts</fullName>
    <columns>NAME</columns>
    <columns>Contract_Title__c</columns>
    <columns>Contract_Type__c</columns>
    <columns>Status__c</columns>
    <columns>Contract_Value__c</columns>
    <columns>Submission_Date__c</columns>
    <columns>SLA_Status__c</columns>
    <filterScope>Mine</filterScope>
    <label>My Contracts</label>
</ListView>