force-app/main/default/objects/YGSF_Contract__c/listViews/Pending_Signatures.listView-meta.xml
<ListView>
    <fullName>Pending_Signatures</fullName>
    <columns>NAME</columns>
    <columns>Contract_Title__c</columns>
    <columns>Contract_Type__c</columns>
    <columns>Approval_Path__c</columns>
    <columns>Contract_Value__c</columns>
    <columns>Staff_Liaison__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Status__c</field>
        <operation>equals</operation>
        <value>Pending Signatures</value>
    </filters>
    <label>Pending Signatures</label>
</ListView>